syntax = "proto3";

option csharp_namespace = "LogicCore.Communicators";

package email;

service Email{
  rpc SendLetter (EmailSendRequest) returns (EmailSendReply);
}
message EmailSendRequest{
  string recipient = 1;
  string text = 2;
  string subject = 3;
  string attachments = 4;
  bool isHtml=5;
}
message EmailSendReply{
  string reply =1;
}